--- a/tonkoslovie-application/src/main/resources/db/changesets/sequence-create.yml
+++ b/tonkoslovie-application/src/main/resources/db/changesets/sequence-create.yml
@@ -1,7 +1,50 @@
 databaseChangeLog:
   - changeSet:
-      id: hibernate_sequence.create
+      id: exercise_id_sequence.create
       author: romanov
       changes:
         - sqlFile:
-            path: db/sql/sequence/hibernate_sequence.sql
+            path: db/sql/sequence/exercise_id_sequence.sql
+
+  - changeSet:
+      id: lesson_id_sequence.create
+      author: romanov
+      changes:
+        - sqlFile:
+            path: db/sql/sequence/lesson_id_sequence.sql
+
+  - changeSet:
+      id: text_id_sequence.create
+      author: romanov
+      changes:
+        - sqlFile:
+            path: db/sql/sequence/text_id_sequence.sql
+
+  - changeSet:
+      id: theme_id_sequence.create
+      author: romanov
+      changes:
+        - sqlFile:
+            path: db/sql/sequence/theme_id_sequence.sql
+
+  - changeSet:
+      id: word_id_sequence.create
+      author: romanov
+      changes:
+        - sqlFile:
+            path: db/sql/sequence/word_id_sequence.sql
+
+  - changeSet:
+      id: user_id_sequence.create
+      author: romanov
+      changes:
+        - sqlFile:
+            path: db/sql/sequence/user_id_sequence.sql
+
+
+  - changeSet:
+      id: email_verification_id_sequence.create
+      author: romanov
+      changes:
+        - sqlFile:
+            path: db/sql/sequence/email_verification_id_sequence.sql
